--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-cli": "^2.0.1",
+    "react-native-fab": "^1.0.17",
+    "react-native-gesture-handler": "1.8.0",
+    "react-native-modal": "^11.7.0",
+    "react-native-reanimated": "1.13.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "2.15.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
