--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "react-native": "0.63.4",
     "react-native-cli": "^2.0.1",
     "react-native-fab": "^1.0.17",
+    "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "1.8.0",
     "react-native-modal": "^11.7.0",
     "react-native-reanimated": "1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
