--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-camera": "~9.1.0",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-camera": "^3.43.6",
     "react-native-cli": "^2.0.1",
     "react-native-fab": "^1.0.17",
     "react-native-flash-message": "^0.1.23",
